# erpnext_iot_inventory

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
erpnext_iot_inventory/: hooks.py  modules.txt
erpnext_iot_inventory/config/: desktop.py  docs.py
erpnext_iot_inventory/iot_inventory/: thingsboard.py
erpnext_iot_inventory/iot_inventory/doctype/iot_certificate/: iot_certificate.json  iot_certificate.py  iot_certificate_list.js
erpnext_iot_inventory/iot_inventory/doctype/iot_device/: iot_device.js  iot_device.json  iot_device.py  iot_device_dashboard.py  iot_device_list.js
erpnext_iot_inventory/iot_inventory/doctype/iot_device_profile/: iot_device_profile.json  iot_device_profile.py
erpnext_iot_inventory/iot_inventory/doctype/iot_firmware/: iot_firmware.json  iot_firmware.py
erpnext_iot_inventory/iot_inventory/doctype/iot_gateway/: iot_gateway.js  iot_gateway.json  iot_gateway.py  iot_gateway_dashboard.py  iot_gateway_list.js
erpnext_iot_inventory/iot_inventory/doctype/iot_network_credential/: iot_network_credential.json  iot_network_credential.py
erpnext_iot_inventory/iot_inventory/doctype/iot_sim_card/: iot_sim_card.json  iot_sim_card.py  iot_sim_card_list.js
erpnext_iot_inventory/iot_inventory/doctype/iot_thingsboard_settings/: iot_thingsboard_settings.js  iot_thingsboard_settings.json  iot_thingsboard_settings.py
erpnext_iot_inventory/iot_inventory/workspace/iot_inventory/: iot_inventory.json
erpnext_iot_inventory/public/js/: customer.js
erpnext_iot_inventory/setup/: install.py
